[package]
name = "bitcoin-rpc"
version = "0.1.1"
edition = "2021"
description = "Bitcoin RPC"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
license = "MIT"
homepage = "https://gitlab.com/p2kishimoto/bitcoin-rpc"
repository = "https://gitlab.com/p2kishimoto/bitcoin-rpc.git"
keywords = ["bitcoin", "bitcoin-rpc", "json-rpc"]

[dependencies]
bitcoin = { version = "0.29", features = ["serde"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
