[package]
name = "bitcoin-rpc"
version = "0.1.1"
edition = "2021"
description = "Bitcoin RPC"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
license = "MIT"
homepage = "https://github.com/yukibtc/bitcoin-rpc"
repository = "https://github.com/yukibtc/bitcoin-rpc.git"
keywords = ["bitcoin", "bitcoin-rpc", "json-rpc"]

[dependencies]
bitcoin = { version = "0.30", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
